pet rehoming form page

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
               </p>
             </div>
             <button class="card-button" id="btnStartRehoming">
+              <!-- onclick="location.href='rehome-pet.html'" -->
               Start rehoming
             </button>
           </div>
@@ -245,7 +246,6 @@
       </div>
       <div class="footer__bar" id="footer-bar">© 2025 Petcare.uz</div>
     </footer>
-
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
     <script src="languages.json"></script>
@@ -258,5 +258,6 @@
       lucide.createIcons();
     </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <div class="notification" id="notification"></div>
   </body>
 </html>
