--- a/loginFull.html
+++ b/loginFull.html
@@ -123,6 +123,38 @@
       .signup-only {
         display: none; /* Hidden by default for login */
       }
+
+      .password-container {
+        position: relative;
+        width: 100%;
+        margin-bottom: 1rem; /* Add space between inputs */
+      }
+
+      .password-container input {
+        width: 100%;
+        padding: 0.8rem 2.5rem 0.8rem 0.8rem; /* Right padding for icon space */
+        border: 1px solid var(--text-light);
+        border-radius: 5px;
+        font-size: 1rem;
+        color: var(--text-dark);
+        font-family: var(--header-font);
+        box-sizing: border-box; /* Ensure padding doesn’t increase width */
+      }
+
+      .password-container .toggle-password {
+        position: absolute;
+        right: 0.8rem; /* Distance from right edge */
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 1.2rem;
+        color: var(--text-dark);
+        cursor: pointer;
+        transition: color 0.3s;
+      }
+
+      .password-container .toggle-password:hover {
+        color: var(--extra-light);
+      }
     </style>
   </head>
   <body>
@@ -145,7 +177,15 @@
           required
         />
         <input type="email" id="email" placeholder="Email" required />
-        <input type="password" id="password" placeholder="Password" required />
+        <div class="password-container">
+          <input
+            type="password"
+            id="password"
+            placeholder="Password"
+            required
+          />
+          <i class="ri-eye-line toggle-password" data-target="newPassword"></i>
+        </div>
         <input
           type="password"
           id="confirmPassword"
@@ -163,158 +203,191 @@
     </div>
 
     <script src="login-script.js">
-      const authForm = document.getElementById('authForm');
-            const submitBtn = document.getElementById('submitBtn');
-            const formTitle = document.getElementById('formTitle');
-            const toggleLink = document.getElementById('toggleLink');
-            const toggleText = document.getElementById('toggleText');
-            const errorMsg = document.getElementById('errorMsg');
-            const nameInput = document.getElementById('name');
-            const surnameInput = document.getElementById('surname');
-            const confirmPasswordInput = document.getElementById('confirmPassword');
-            let isLogin = true;
+            const authForm = document.getElementById('authForm');
+      const submitBtn = document.getElementById('submitBtn');
+      const formTitle = document.getElementById('formTitle');
+      const toggleLink = document.getElementById('toggleLink');
+      const toggleText = document.getElementById('toggleText');
+      const errorMsg = document.getElementById('errorMsg');
+      const nameInput = document.getElementById('name');
+      const surnameInput = document.getElementById('surname');
+      const confirmPasswordInput = document.getElementById('confirmPassword');
+      let isLogin = true;
+      const API_URL = 'https://petcare-backend-h0cq.onrender.com/api/auth'; // Change this to your production URL after deploying
 
-            // Load users from localStorage (for demo purposes)
-            let users = JSON.parse(localStorage.getItem('users')) || [];
+      // Load users from localStorage (for demo purposes)
+      let users = JSON.parse(localStorage.getItem('users')) || [];
 
-            // Function to toggle form fields visibility
-            function toggleFormFields() {
-              const signupFields = document.querySelectorAll('.signup-only');
-              signupFields.forEach(field => {
-                field.style.display = isLogin ? 'none' : 'block';
-                field.required = !isLogin; // Make fields required only for signup
-              });
+      // Function to toggle form fields visibility
+      function toggleFormFields() {
+        const signupFields = document.querySelectorAll('.signup-only');
+        signupFields.forEach(field => {
+          field.style.display = isLogin ? 'none' : 'block';
+          field.required = !isLogin; // Make fields required only for signup
+        });
+      }
+
+      // Initial call to set correct field visibility
+      toggleFormFields();
+
+      // Toggle between login and sign-up
+      toggleLink.addEventListener('click', e => {
+        e.preventDefault();
+        isLogin = !isLogin;
+        const currentLang = localStorage.getItem('lang') || 'en';
+        formTitle.textContent = isLogin
+          ? languages[currentLang].formTitle
+          : languages[currentLang].signup;
+        submitBtn.textContent = isLogin
+          ? languages[currentLang].formTitle
+          : languages[currentLang].signup;
+        toggleText.textContent = isLogin
+          ? languages[currentLang].toggleText
+          : languages[currentLang].toggleTextAlt;
+
+        toggleLink.textContent = isLogin
+          ? languages[currentLang].toggleLink
+          : languages[currentLang].formTitle;
+        errorMsg.style.display = 'none';
+        toggleFormFields(); // Show/hide signup fields
+      });
+
+      // Handle form submission
+      authForm.addEventListener('submit', async e => {
+        e.preventDefault();
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+
+        if (isLogin) {
+          // Login logic
+          const response = await fetch(
+            'https://petcare-backend-h0cq.onrender.com/api/auth/login',
+            {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({email, password}),
             }
+          );
 
-            // Initial call to set correct field visibility
-            toggleFormFields();
+          const data = await response.json();
 
-            // Toggle between login and sign-up
-            toggleLink.addEventListener('click', e => {
-              e.preventDefault();
-              isLogin = !isLogin;
-              const currentLang = localStorage.getItem('lang') || 'en';
-              formTitle.textContent = isLogin
-                ? languages[currentLang].formTitle
-                : languages[currentLang].signup;
-              submitBtn.textContent = isLogin
-                ? languages[currentLang].formTitle
-                : languages[currentLang].signup;
-              toggleText.textContent = isLogin
-                ? languages[currentLang].toggleText
-                : languages[currentLang].toggleTextAlt;
+          if (response.ok) {
+            // Successful login, store token and user data
+            localStorage.setItem('token', data.token);
+            localStorage.setItem('currentUser', JSON.stringify(data.user)); // Store user data
+            window.location.href = 'index.html'; // Redirect to home page
+          } else {
+            // Login failed, show error
+            errorMsg.textContent = data.message || 'Invalid email or password';
+            errorMsg.style.display = 'block';
+          }
+        } else {
+          // Sign-up logic
+          const name = nameInput.value;
+          const surname = surnameInput.value;
+          const confirmPassword = confirmPasswordInput.value;
 
-              toggleLink.textContent = isLogin
-                ? languages[currentLang].toggleLink
-                : languages[currentLang].formTitle;
-              errorMsg.style.display = 'none';
-              toggleFormFields(); // Show/hide signup fields
-            });
+          // Validation
+          if (password !== confirmPassword) {
+            errorMsg.textContent = 'Passwords do not match';
+            errorMsg.style.display = 'block';
+            return;
+          }
 
-            // Handle form submission
-            authForm.addEventListener('submit', e => {
-              e.preventDefault();
-              const email = document.getElementById('email').value;
-              const password = document.getElementById('password').value;
-
-              if (isLogin) {
-                // Login logic
-                const user = users.find(u => u.email === email && u.password === password);
-                if (user) {
-                  localStorage.setItem('currentUser', JSON.stringify(user));
-                  window.location.href = 'index.html'; // Redirect to home page
-                } else {
-                  errorMsg.textContent = 'Invalid email or password';
-                  errorMsg.style.display = 'block';
-                }
-              } else {
-                // Sign-up logic
-                const name = nameInput.value;
-                const surname = surnameInput.value;
-                const confirmPassword = confirmPasswordInput.value;
-
-                // Validation
-                if (password !== confirmPassword) {
-                  errorMsg.textContent = 'Passwords do not match';
-                  errorMsg.style.display = 'block';
-                  return;
-                }
-
-                if (users.some(u => u.email === email)) {
-                  errorMsg.textContent = 'Email already exists';
-                  errorMsg.style.display = 'block';
-                } else {
-                  const newUser = {name, surname, email, password};
-                  users.push(newUser);
-                  localStorage.setItem('users', JSON.stringify(users));
-                  localStorage.setItem('currentUser', JSON.stringify(newUser));
-                  window.location.href = 'index.html'; // Redirect to home page
-                }
-              }
-            });
-
-            // Check if user is already logged in
-            if (localStorage.getItem('currentUser')) {
-              window.location.href = 'index.html';
+          const response = await fetch(
+            'https://petcare-backend-h0cq.onrender.com/api/auth/register',
+            {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({name, surname, email, password}),
             }
+          );
 
-            // Fetch translations from languages.json
-            async function loadTranslations() {
-              try {
-                const response = await fetch('languages.json');
-                if (!response.ok) throw new Error('Failed to load languages.json');
-                languages = await response.json();
-                const savedLang = localStorage.getItem('lang') || 'en';
-                updateLanguage(savedLang);
-              } catch (error) {
-                console.error('Error fetching translations:', error);
-              }
-            }
+          const data = await response.json();
 
-            function updateLanguage(lang = localStorage.getItem('lang') || 'en') {
-              if (!languages[lang]) {
-                console.error(`Language ${lang} not found in translations`);
-                return;
-              }
+          if (response.ok) {
+            // Successful sign-up, store token and user data
+            localStorage.setItem('token', data.token);
+            localStorage.setItem('currentUser', JSON.stringify(data.user)); // Store user data
+            window.location.href = 'index.html'; // Redirect to home page
+          } else {
+            // Sign-up failed, show error
+            errorMsg.textContent = data.message || 'Error during registration';
+            errorMsg.style.display = 'block';
+          }
+        }
+      });
 
-              const elements = {
-                formTitle: formTitle,
-                submitBtn: submitBtn,
-                toggleText: toggleText,
-                toggleLink: toggleLink,
-                errorMsg: errorMsg,
-              };
+      // Get token from localStorage
+      const currentUser = localStorage.getItem('currentUser');
+      const token = localStorage.getItem('token');
 
-              // Update text content based on language
-              elements.formTitle.textContent = isLogin
-                ? languages[lang].formTitle
-                : languages[lang].signup || 'Sign Up';
-              elements.submitBtn.textContent = isLogin
-                ? languages[lang].formTitle
-                : languages[lang].signup || 'Sign Up';
-              elements.toggleText.textContent = isLogin
-                ? languages[lang].toggleText || "Don't have an account?"
-                : languages[lang].toggleTextAlt || 'Already have an account?';
-              elements.toggleLink.textContent = isLogin
-                ? languages[lang].toggleLink || 'Sign Up'
-                : languages[lang].login || 'Log In';
-              elements.errorMsg.textContent =
-                languages[lang].errorMsg || 'Invalid email or password';
+      // Check if user is already logged in
+      if (localStorage.getItem('currentUser')) {
+        window.location.href = 'index.html';
+      }
 
-              // Update placeholders (optional, if you want them translated)
-              document.getElementById('name').placeholder = languages[lang].name || 'Name';
-              document.getElementById('surname').placeholder =
-                languages[lang].surname || 'Surname';
-              document.getElementById('email').placeholder =
-                languages[lang].email || 'Email';
-              document.getElementById('password').placeholder =
-                languages[lang].password || 'Password';
-              document.getElementById('confirmPassword').placeholder =
-                languages[lang].confirmPassword || 'Confirm Password';
-            }
+      // Fetch translations from languages.json
+      async function loadTranslations() {
+        try {
+          const response = await fetch('languages.json');
+          if (!response.ok) throw new Error('Failed to load languages.json');
+          languages = await response.json();
+          const savedLang = localStorage.getItem('lang') || 'en';
+          updateLanguage(savedLang);
+        } catch (error) {
+          console.error('Error fetching translations:', error);
+        }
+      }
 
-            // Load translations when the page loads
-            loadTranslations();
+      function updateLanguage(lang = localStorage.getItem('lang') || 'en') {
+        if (!languages[lang]) {
+          console.error(`Language ${lang} not found in translations`);
+          return;
+        }
+
+        const elements = {
+          formTitle: formTitle,
+          submitBtn: submitBtn,
+          toggleText: toggleText,
+          toggleLink: toggleLink,
+          errorMsg: errorMsg,
+        };
+
+        // Update text content based on language
+        elements.formTitle.textContent = isLogin
+          ? languages[lang].formTitle
+          : languages[lang].signup || 'Sign Up';
+        elements.submitBtn.textContent = isLogin
+          ? languages[lang].formTitle
+          : languages[lang].signup || 'Sign Up';
+        elements.toggleText.textContent = isLogin
+          ? languages[lang].toggleText || "Don't have an account?"
+          : languages[lang].toggleTextAlt || 'Already have an account?';
+        elements.toggleLink.textContent = isLogin
+          ? languages[lang].toggleLink || 'Sign Up'
+          : languages[lang].login || 'Log In';
+        elements.errorMsg.textContent =
+          languages[lang].errorMsg || 'Invalid email or password';
+
+        // Update placeholders (optional, if you want them translated)
+        document.getElementById('name').placeholder = languages[lang].name || 'Name';
+        document.getElementById('surname').placeholder =
+          languages[lang].surname || 'Surname';
+        document.getElementById('email').placeholder =
+          languages[lang].email || 'Email';
+        document.getElementById('password').placeholder =
+          languages[lang].password || 'Password';
+        document.getElementById('confirmPassword').placeholder =
+          languages[lang].confirmPassword || 'Confirm Password';
+      }
+
+      // Load translations when the page loads
+      loadTranslations();
     </script>
     <script src="languages.json"></script>
   </body>
