--- a/adoption.html
+++ b/adoption.html
@@ -63,7 +63,7 @@
     </div>
     <div class="overlay hidden"></div>
     <!-- Assuming you have a nav bar, add it here if needed -->
-    <section class="section__container adoption__container">
+    <section class="adoption__container">
       <div class="adoption__header">
         <h1 id="adoptionTitle">Pets Available for Adoption</h1>
       </div>
