--- a/cart.html
+++ b/cart.html
@@ -52,7 +52,9 @@
     <section class="cart__container">
       <div class="cart__header">
         <h1 id="cartTitle">Your Cart</h1>
-        <p id="cartDescription">Review the items you’ve added to your cart.</p>
+        <p id="cartDescription">
+          Review the pet and items you’ve added to your cart.
+        </p>
       </div>
       <div class="cart__grid" id="cartGrid"></div>
     </section>
