--- a/index.html
+++ b/index.html
@@ -233,6 +233,60 @@
       </div>
     </section>
 
+    <section class="section__container pricing" id="pricing">
+      <div class="pricing__container">
+        <h1 class="section__header" id="pricingTitle">Our Pricing & Deals</h1>
+        <p class="pricing__description" id="pricingDescription">
+          Affordable options for pet lovers.
+        </p>
+        <div class="pricing__table">
+          <div class="pricing__row pricing__header">
+            <div class="pricing__cell">Plan</div>
+            <div class="pricing__cell">Features</div>
+            <div class="pricing__cell">Price</div>
+            <div class="pricing__cell">Action</div>
+          </div>
+          <div class="pricing__row">
+            <div class="pricing__cell">Adoption Starter</div>
+            <div class="pricing__cell">
+              First 2 adoptions free (no adoption fee). <br />Basic health check
+              included for each pet.
+            </div>
+            <div class="pricing__cell">
+              0 UZS (for first 2 adoptions, then 25.000 UZS/pet)
+            </div>
+            <div class="pricing__cell">
+              <button class="pricing__btn">Choose</button>
+            </div>
+          </div>
+          <div class="pricing__row">
+            <div class="pricing__cell">Rehoming Support</div>
+            <div class="pricing__cell">
+              First 2 rehoming submissions free (no listing fee).
+            </div>
+            <div class="pricing__cell">
+              0 UZS (for first 2 rehoming posts, then 30.000UZS/post)
+            </div>
+            <div class="pricing__cell">
+              <button class="pricing__btn">Choose</button>
+            </div>
+          </div>
+          <div class="pricing__row">
+            <div class="pricing__cell">Pet Products Bundle</div>
+            <div class="pricing__cell">
+              20% off first pet product purchase (e.g., food, toys).<br />
+            </div>
+            <div class="pricing__cell">
+              Starting at 80.000UZS (discounted from 100.000)
+            </div>
+            <div class="pricing__cell">
+              <button class="pricing__btn">Choose</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer" id="contact">
       <div class="section__container footer__container">
         <div class="footer__logo">
