pet profile page fixation

--- a/pet-profile.html
+++ b/pet-profile.html
@@ -25,14 +25,18 @@
         </div>
       </div>
       <ul class="nav__links" id="nav-links">
+        <li id="shoppingCartLi" style="display: none">
+          <a href="cart.html" id="shoppingCartBtn" title="Basket">
+            <i class="ri-shopping-cart-2-fill"></i>
+          </a>
+        </li>
+        <li id="profileLi" style="display: none">
+          <a href="profile.html" id="profileBtn" title="Profile">
+            <i class="ri-user-fill"></i>
+          </a>
+        </li>
         <li id="authSection">
-          <a
-            href="index.html"
-            id="logoutBtn"
-            class="logout-btn"
-            style="color: #fff"
-            >Log out</a
-          >
+          <a href="login-page.html" id="login">Log in</a>
         </li>
         <li>
           <a class="show-modal" id="lang">
@@ -90,7 +94,6 @@
             <span class="pet-label">Phone:</span> <span id="petPhone"></span>
           </p>
           <p>
-            <span class="pet-label">Owner Email:</span>
             <span id="petOwnerEmail"></span>
           </p>
           <p>
