--- a/login-page.html
+++ b/login-page.html
@@ -61,6 +61,31 @@
         <a href="#" id="toggleLink">Sign Up</a>
       </p>
     </div>
+    <div class="loading-modal" id="loadingModal">
+      <div
+        aria-label="Orange and tan hamster running in a metal wheel"
+        role="img"
+        class="wheel-and-hamster"
+      >
+        <div class="wheel"></div>
+        <div class="hamster">
+          <div class="hamster__body">
+            <div class="hamster__head">
+              <div class="hamster__ear"></div>
+              <div class="hamster__eye"></div>
+              <div class="hamster__nose"></div>
+            </div>
+            <div class="hamster__limb hamster__limb--fr"></div>
+            <div class="hamster__limb hamster__limb--fl"></div>
+            <div class="hamster__limb hamster__limb--br"></div>
+            <div class="hamster__limb hamster__limb--bl"></div>
+            <div class="hamster__tail"></div>
+          </div>
+        </div>
+        <div class="spoke"></div>
+      </div>
+    </div>
+    <div class="loading-overlay" id="loadingOverlay"></div>
 
     <script src="login-script.js"></script>
     <script src="languages.json"></script>
